# git-whisper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  SETUP_GUIDE.md  WORKFLOW_GUIDE.md  docker-compose.override.yaml  main.py  pyproject.toml  requirements.txt
app/: memory_store.py  story_engine.py
app/config/: envVars.py
docker/: Dockerfile  README.md  compose.yaml
docker/core/: compose.yaml
docker/mongo/: compose.yaml
src/: config.rs  gemini.rs  history_analyzer.py  main.rs  memory_store.py  repository.rs  storage.rs  story_engine.py  workspace.rs
src/cli/: add.rs  analyze.rs  changelog.rs  demo.rs  help.rs  last.rs  mod.rs  setup.rs  since.rs  summary.rs
