[package]
name = "git-whisperer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
dotenv = "0.15"
git2 = "0.19"
futures = "0.3"
tempfile = "3.8"
url = "2.5"
